Moved incident total tally to the top of the mrm summary page, and redirected users to the summary tab if displaying an mrm incident.

--- a/app/views/form_section/_tabs.html.erb
+++ b/app/views/form_section/_tabs.html.erb
@@ -1,6 +1,6 @@
 <ul class="tab-handles side-nav">
   <% tabs.each do |form_group, forms| %>
-    <%= build_form_tabs(form_group, forms) %>
+    <%= build_form_tabs(form_group, forms, show_summary ||= false) %>
   <% end %>
   <li>
 		<%= yield :header_message %>
