PRIMERO-731 - QA16.2:  Cancel on Tracing Request and Incidents does not return to the List View as message indicates

--- a/app/views/incidents/edit.html.erb
+++ b/app/views/incidents/edit.html.erb
@@ -1,5 +1,5 @@
 <% content_for :record_sub_nav_controls do %>
-  <%= render_controls(@incident) %> 
+  <%= render_controls(@incident, "incidents") %> 
 <% end %>
 
 <% content_for :record_sub_nav do %>
