reenabling continuous replication and transferring reindexing to change watcher

--- a/cookbook/templates/default/nginx_couch.erb
+++ b/cookbook/templates/default/nginx_couch.erb
@@ -3,6 +3,8 @@ server {
   ssl_certificate <%= @ssl_cert_path %>;
   ssl_certificate_key <%= @ssl_key_path %>;
 
+  proxy_buffering off;
+
   location / {
     proxy_pass http://localhost:5984;
   }
