--- a/app/views/shared/_side_tab.html.erb
+++ b/app/views/shared/_side_tab.html.erb
@@ -6,6 +6,8 @@
     <li class=<%= (highlight_page == 'unverified' ? 'current' : '') %>>
     	<%= link_to I18n.t("users.unverified"), unverified_users_path if can?(:show, User)  %></li>
     <% end %>
+    <li class=<%= (highlight_page == 'agencies' ? 'current' : '') %>>
+      <%= link_to I18n.t("agencies.label"), agencies_path if can?(:index, Agency)  %></li>
     <li class=<%= (highlight_page == 'roles' ? 'current' : '') %>>
     	<%= link_to t("roles.label"), roles_path if can?(:index, Role) %></li>
     <li class=<%= (highlight_page == 'user_groups' ? 'current' : '') %>>
