PRIMERO-738 FT1 - Auto-Fill in Chrome, IE, FF all need to be disabled.

--- a/app/views/advanced_search/index.html.erb
+++ b/app/views/advanced_search/index.html.erb
@@ -7,7 +7,7 @@
     <div class="error" style="display:none"></div>
   </div>
 
-  <form action="index">
+  <form action="index" autocomplete="off">
 
     <div class='criteria_menu' style='display:none;'>
       <a class='close-link'><%= image_tag("dialog-close.png") %></a>
