--- a/app/views/roles/_editable_role.html.erb
+++ b/app/views/roles/_editable_role.html.erb
@@ -1,4 +1,4 @@
-<%= form_for editable_role, :html => {:class => 'default-form'} do |f| %>
+<%= form_for editable_role, :html => {:class => 'default-form', :autocomplete => "off"} do |f| %>
     <div class="clearfix"></div>
     <%= f.error_messages :header_tag => :h3 %>
 
