--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -19,7 +19,7 @@
     <div class="side-tab-content" data-equalizer-watch>
       <div class="row">
         <div class="large-12 columns">
-          <%= form_for @role, :html => {:class => ''} do |f| %>
+          <%= form_for @role, :html => {:class => '', :autocomplete => "off"} do |f| %>
               <%= error_messages_for :role %>
               <fieldset class="no-border">
                 <div class="row">
