--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -15,7 +15,7 @@
     <br /><p><%= link_to t("admin.manage_system_users"), system_users_path %></p>
   <% end %>
 
-  <%= form_tag admin_update_path, :method => "put"  do %>
+  <%= form_tag admin_update_path, :method => "put", :autocomplete => "off" do %>
       <%= label_tag "user_locale", t("home.language") %>
       <%= select_tag :locale, options_for_select(RapidFTR::Application::LOCALES_WITH_DESCRIPTION, I18n.default_locale) %>
       <%= submit_tag t("buttons.save") %>
