--- a/app/views/children/_filter.html.erb
+++ b/app/views/children/_filter.html.erb
@@ -1,5 +1,5 @@
 <div class="panel">
-  <form id="index_filter_form">
+  <form id="index_filter_form" autocomplete="off">
     <% if filters_to_show.include? 'Flagged' %>
       <%= build_filter_checkboxes(t("cases.filter_by.flag"), 'flag', [
         {flag: t("cases.filter_by.flag_label")}
