--- a/app/views/children/_search_results.html.erb
+++ b/app/views/children/_search_results.html.erb
@@ -23,7 +23,7 @@
 </script>
 
 <% has_results = (@results && @results.size > 0) %>
-<%= form_tag export_data_children_path, :method => :post do %>
+<%= form_tag export_data_children_path, :method => :post, :autocomplete => "off" do %>
   <br />
   <div class="profiles-list child_list">
     <% if @results %>
