--- a/app/views/children/edit_photo.html.erb
+++ b/app/views/children/edit_photo.html.erb
@@ -3,7 +3,7 @@
 
 <div class="page-content-new">
   <div class="edit_photo_page">
-    <%= form_for @child, :url => update_photo_url, :html => {:method => :put} do |f| %>
+    <%= form_for @child, :url => update_photo_url, :html => {:method => :put, :autocomplete => "off"} do |f| %>
         <div class="profile-image display_photo">
           <%= image_tag child_photo_path(@child, @child.primary_photo_id), :id => "child_picture" %>
         </div>
