--- a/app/views/duplicates/new.html.erb
+++ b/app/views/duplicates/new.html.erb
@@ -6,7 +6,7 @@
     <%= error_messages_for @child %>
     <%= render :partial => "children/summary_row", :object => @child, :as => :child, :locals => { :checkbox => false, :show_links => false, :highlighted_fields => FormSection.sorted_highlighted_fields } %>
 
-    <%= form_tag child_duplicate_path(@child), :method => :post do %>
+    <%= form_tag child_duplicate_path(@child), :method => :post, :autocomplete => "off" do %>
       <%= label_tag(:parent_id,t("child.id_of_record_this_duplicate_of")) %>
       <%= text_field_tag(:parent_id) %>
 
