--- a/app/views/form_section/_new_or_edit_form_section.html.erb
+++ b/app/views/form_section/_new_or_edit_form_section.html.erb
@@ -14,7 +14,7 @@
 
 <div class="row">
   <div class="medium-12 columns form-section-content">
-    <%= form_for @form_section, :url => url_for_form_section(@form_section), :html => {:class => "default-form", "data-abide" => ''} do |f| %>
+    <%= form_for @form_section, :url => url_for_form_section(@form_section), :html => {:class => "default-form", "data-abide" => '', :autocomplete => "off"} do |f| %>
       <div class="form_details_panel">
         <div class="default_lang_panel">
           <div class="lang_title">
