--- a/app/views/imports/_button.erb
+++ b/app/views/imports/_button.erb
@@ -6,7 +6,7 @@
 
     <div id="import-modal" class="reveal-modal tiny" data-reveal>
       <a class="close-reveal-modal">&#215;</a>
-      <%= form_tag(url_for(:action => 'import_file'), {:multipart => true, :method => 'post'}) do %>
+      <%= form_tag(url_for(:action => 'import_file'), {:multipart => true, :method => 'post', :autocomplete => "off"}) do %>
         <%= file_field_tag("import_file") %>
         <label><%=I18n.t("imports.password_label")%>
           <%= password_field_tag "password" %>
