--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -6,7 +6,7 @@
 %>
 <div class="btn_panel">
   <div class="row">
-    <%= form_for @location, :html => { :class => 'default-form' } do |f| %>
+    <%= form_for @location, :html => { :class => 'default-form', :autocomplete => "off" } do |f| %>
 
       <%= f.error_messages :header_tag => :h3 %>
       <div class="clearfix"></div>
