--- a/app/views/lookups/_form.html.erb
+++ b/app/views/lookups/_form.html.erb
@@ -4,7 +4,7 @@
 <% end %>
 
 <div class="row">
-  <%= form_for @lookup, :html => { :class => 'default-form' } do |f| %>
+  <%= form_for @lookup, :html => { :class => 'default-form', :autocomplete => "off" } do |f| %>
     <%= f.error_messages :header_tag => :h3 %>
     <fieldset class="no-border">
       <div class="row">
