--- a/app/views/replications/_form.html.erb
+++ b/app/views/replications/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="btn_panel">
   <div class="row">
-    <%= form_for @replication, :html => { :class => 'default-form' } do |f| %>
+    <%= form_for @replication, :html => { :class => 'default-form', :autocomplete => "off" } do |f| %>
 
       <%= f.error_messages :header_tag => :h3 %>
       <div class="clearfix"></div>
