--- a/app/views/shared_configuration_resource/_edit.html.erb
+++ b/app/views/shared_configuration_resource/_edit.html.erb
@@ -23,7 +23,7 @@
     <div class="side-tab-content" data-equalizer-watch>
       <div class="row">
           <div class="large-12 columns">
-              <%= form_for object, html: {class: 'default-form'} do |f| %>
+              <%= form_for object, html: {class: 'default-form', :autocomplete => "off"} do |f| %>
                 <div class="clearfix"></div>
                 <%= f.error_messages :header_tag => :h3 %>
                 <div class="clearfix"></div>
