--- a/app/views/system_users/_form.html.erb
+++ b/app/views/system_users/_form.html.erb
@@ -1,6 +1,6 @@
 
 <%= form_for @user, :url => @user.new? ? system_users_path : system_user_path(@user.name),
-       :html => { :class => 'default-form' } do |f| %>
+       :html => { :class => 'default-form', :autocomplete => "off" } do |f| %>
 
   <%= f.error_messages :header_tag => :h3 %>
   <div class="clearfix"></div>
