--- a/app/views/users/_users_table.html.erb
+++ b/app/views/users/_users_table.html.erb
@@ -6,7 +6,7 @@
   <%# TODO: Hiding imports so that QA doesn't get into trouble %>
   <%#= render 'imports/button' %>
 <% end %>
-<form class="filter_bar">
+<form class="filter_bar" autocomplete="off">
   <div class="row">
     <div class="medium-6 columns">
         <div class="float_left">
