changed class name on table so previous and next would not appear on SYNC table

--- a/app/views/replications/_list_view_table.html.erb
+++ b/app/views/replications/_list_view_table.html.erb
@@ -1,4 +1,4 @@
-<table id="list_table" class="list_table">
+<table id="list_table" class="list_table_2">
   <thead>
   <tr>
     <th><%= t "replication.description" %></th>
