PRIMERO-737 FT1 - Export - Name the file. Allow the user provide the file name of the export file. The file name is asked in the password dialog box and it is optional.

--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -405,7 +405,11 @@ span.postfix_val {
     margin-bottom: 10px;
   }
 
-  input#password-prompt-field {
+  input {
+    margin: 0px;
+  }
+
+  label#export-file-name-label {
     margin-top: 15px;
   }
 }
