--- a/app/views/exports/_password_prompt.html.erb
+++ b/app/views/exports/_password_prompt.html.erb
@@ -6,4 +6,6 @@
   <label for="password-prompt-field"><%= t("encrypt.password_label") %></label>
   <input type="password" id="password-prompt-field" />
   <small><%= t("encrypt.password_extra_info") %></small>
+  <label id="export-file-name-label" for="export-file-name-field"><%= t("encrypt.file_name") %></label>
+  <input type="text" id="export-file-name-field" />
 </div>
