--- a/app/views/incidents/edit.html.erb
+++ b/app/views/incidents/edit.html.erb
@@ -1,5 +1,5 @@
 <% content_for :record_sub_nav_controls do %>
-  <%= render_controls(@incident, "incidents") %> 
+  <%= render_controls(@incident, "incidents") %>
 <% end %>
 
 <% content_for :record_sub_nav do %>
@@ -20,12 +20,12 @@
   <div class="page-content-new row collapse" data-equalizer>
     <div class="large-4 medium-4 columns close-side-tab side-tab-container">
       <div class="side-tab" data-equalizer-watch>
-        <%= render :partial => 'form_section/tabs', :object => @form_sections %>
+        <%= render :partial => 'form_section/tabs', :object => @form_sections, locals: { show_summary: true } %>
       </div>
     </div>
 
     <div class="large-8 medium-8 columns side-tab-content-container">
-      <div class="side-tab-content" data-equalizer-watch>      
+      <div class="side-tab-content" data-equalizer-watch>
         <%= hidden_field_tag('incident[base_revision]', @incident._rev) %>
         <% @form_sections.each do |form_group_name, form_list| %>
           <%= render :partial => 'form_section/form_section', :collection => form_list,  :locals => {:formObject => @incident, :form_group_name => form_group_name} %>
