--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -59,7 +59,7 @@
         <%= resource_show_field @user, 'email', 'email' %>
         <%= resource_show_field @user, 'organization', 'organization' %>
         <%= resource_show_field @user, 'position', 'position' %>
-        <%= resource_show_field @user, 'location', 'location' %>
+        <%= resource_show_field @user, 'location', 'user.location' %>
 
         <div class="row">
           <div class="medium-4 columns">
