added match_record action in children controller

--- a/app/views/children/_show_child_toolbar.html.erb
+++ b/app/views/children/_show_child_toolbar.html.erb
@@ -1,4 +1,9 @@
 <%# TODO: Refactor this toolbar to be shared by all record types. %>
+<% if params[:match].present? %>
+  <li>
+    <%= link_to t("child.match_record"), match_record_case_path(@child, match: params[:match]), class: 'btn green-button', method: :put %>
+  </li>
+<% end %>
 <% if can? :flag, child %>
     <li>
         <div class="dropdown_btn dropdown_form">
