--- a/app/views/children/_summary_row.html.erb
+++ b/app/views/children/_summary_row.html.erb
@@ -2,7 +2,11 @@
   <td class="select_record"><input type="checkbox" class="select_record" value="<%= record.id %>" id="<%= text_to_identify_child record %>"></td>
   <% if fields_to_show.include? 'short_id' %>
     <td id="child_<%= record.id %>" class="id_column">
-      <%= link_to text_to_identify_child(record), case_path(record), class: 'id_link' %>
+      <% if @tracing_request.present? && @match_request.present?%>
+        <%= link_to text_to_identify_child(record), case_path(record, match: "#{@tracing_request.id}::#{@match_request.unique_id}"), class: 'id_link' %>
+      <% else %>
+        <%= link_to text_to_identify_child(record), case_path(record), class: 'id_link' %>
+      <% end %>
       <% #content_tag(:div, nil, :class => 'flag reunited') if record.reunited? %>
       <% if record.flagged? && record.flag_count > 0 %>
         <div class="flag_icon">
