--- a/app/views/form_section/_subform_expand_collapse_header.html.erb
+++ b/app/views/form_section/_subform_expand_collapse_header.html.erb
@@ -55,7 +55,7 @@
     </div>
     <% if view_mode && (subform_section.subform_header_links.include? "tracing") %>
       <div class="subform_tracing_link">
-        <%= link_to t('tracing_request.find_match'), cases_path(match: "#{@tracing_request.id}::#{i}") %>
+        <%= link_to t('tracing_request.find_match'), cases_path(match: "#{@tracing_request.id}::#{@tracing_request.tracing_request_subform_section[i].unique_id}") %>
       </div>
     <% end %>
   </div>
