--- a/app/views/users/_editable_user.html.erb
+++ b/app/views/users/_editable_user.html.erb
@@ -34,10 +34,11 @@
             <span class="section">
               <% @roles.each do |role| %>
                   <label>
-                    <%= f.check_box :role_ids, {:id => "user_#{role.name}", :name => "user[role_ids][]"}, role.id, nil %>
+                    <%= f.check_box :role_ids, {:id => "user_#{role.name}", :name => "user[role_ids][]", class: 'tick_box'}, role.id, nil %>
                     <%= role.name %>
                   </label>
               <% end %>
+              <%= f.hidden_field :role_ids, name: 'user[role_ids][]', value: nil %>
             </span>
           </span>
         </div>
@@ -55,10 +56,11 @@
             <span class="section">
               <% @modules.each do |primero_module| %>
                 <label>
-                    <%= f.check_box :module_ids, {id: "user_#{primero_module.name}", name: "user[module_ids][]"}, primero_module.id, nil %>
+                    <%= f.check_box :module_ids, {id: "user_#{primero_module.name}", name: "user[module_ids][]", class: 'tick_box'}, primero_module.id, nil %>
                     <%= primero_module.name %>
                 </label>
               <% end %>
+              <%= f.hidden_field :module_ids, name: 'user[module_ids][]', value: nil %>
             </span>
           </span>
         </div>
@@ -76,10 +78,11 @@
             <span class="section">
               <% @user_groups.each do |user_group| %>
                 <label>
-                    <%= f.check_box :user_group_ids, {id: "user_#{user_group.name}", name: "user[user_group_ids][]"}, user_group.id, nil %>
+                    <%= f.check_box :user_group_ids, {id: "user_#{user_group.name}", name: "user[user_group_ids][]", class: 'tick_box'}, user_group.id, nil %>
                     <%= user_group.name %>
                 </label>
               <% end %>
+              <%= f.hidden_field :user_group_ids, name: 'user[user_group_ids][]', value: nil %>
             </span>
           </span>
         </div>
