--- a/app/views/form_section/_sidebar.html.erb
+++ b/app/views/form_section/_sidebar.html.erb
@@ -7,6 +7,9 @@
       <li class=<%= (highlight_page == 'lookups' ? 'current' : '') %>>
         <%= link_to I18n.t("navigation.lookups"), lookups_path if can?(:manage, Lookup)%>
       </li>
+      <li class=<%= (highlight_page == 'locations' ? 'current' : '') %>>
+        <%= link_to I18n.t("navigation.locations"), locations_path if can?(:manage, Location)%>
+      </li>
     </ul>
   </div>
 </div>
