--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -4,48 +4,40 @@
   parent = @location.parent
   parent_selection ||= (parent.present? ? parent.id : "")
 %>
-<div class="btn_panel">
-  <div class="row">
-    <%= form_for @location, :html => { :class => 'default-form', :autocomplete => "off" } do |f| %>
 
-      <%= f.error_messages :header_tag => :h3 %>
-      <div class="clearfix"></div>
+<% content_for :record_sub_nav do %>
+  <li><%= discard_button(locations_path) %></li>
+  <li><%= submit_button t("buttons.save") %></li>
+<% end %>
 
-      <div class="btn_panel">
-        <div class="row">
-          <div class="medium-12 columns">
-            <%= cancel_button locations_path %>
-            <%= submit_button t("buttons.save") %>
-          </div>
+<div class="row">
+  <%= form_for @location, :html => { :class => 'default-form', :autocomplete => "off" } do |f| %>
+    <fieldset class="no-border">
+      <%= f.error_messages :header_tag => :h2 %>
+      <div class="row">
+        <div class="medium-3 columns">
+          <%= f.label :placename, t("location.placename"), :class => "key" %>
+        </div>
+        <div class="medium-9 columns">
+          <%= f.text_field :placename %>
         </div>
       </div>
-
-      <fieldset>
-        <div class="row">
-          <div class="medium-3 columns">
-            <%= f.label :placename, t("location.placename"), :class => "key" %>
-          </div>
-          <div class="medium-9 columns">
-            <%= f.text_field :placename %>
-          </div>
+      <div class="row">
+        <div class="medium-3 columns">
+          <%= f.label :type, t("location.type"), :class => "key" %>
         </div>
-        <div class="row">
-          <div class="medium-3 columns">
-            <%= f.label :type, t("location.type"), :class => "key" %>
-          </div>
-          <div class="medium-9 columns">
-            <%= select_tag 'location[type]', options_for_select(@location_types, type_selection )%>
-          </div>
+        <div class="medium-9 columns">
+          <%= select_tag 'location[type]', options_for_select(@location_types, type_selection )%>
         </div>
-        <div class="row">
-          <div class="medium-3 columns">
-            <%= f.label :parent_id, t("location.parent"), :class => "key" %>
-          </div>
-          <div class="medium-9 columns">
-            <%= select_tag 'location[parent_id]', options_for_select(parent_options, parent_selection )%>
-          </div>
+      </div>
+      <div class="row">
+        <div class="medium-3 columns">
+          <%= f.label :parent_id, t("location.parent"), :class => "key" %>
         </div>
-      </fieldset>
-    <% end %>
-  </div>
+        <div class="medium-9 columns">
+          <%= select_tag 'location[parent_id]', options_for_select(parent_options, parent_selection )%>
+        </div>
+      </div>
+    </fieldset>
+  <% end %>
 </div>
