Restructured html for sync

--- a/app/assets/stylesheets/primero/page.scss
+++ b/app/assets/stylesheets/primero/page.scss
@@ -184,6 +184,10 @@ table.dataTable {
   }
 }
 
+.side-tab-content.no-side-bar {
+  border-left: 1px solid $stroke_green_color;
+}
+
 ////////////////////////////////////////////////
 // Panel
 ////////////////////////////////////////////////
