--- a/app/views/replications/new.html.erb
+++ b/app/views/replications/new.html.erb
@@ -1,11 +1,11 @@
-<div class="row">
-  <div class="large-12 medium-12 columns">
-    <h1 class="no_border"><%= t "replication.create" %></h1>
-
-    <div class="page-content-new replication-page">
-      <div class="side-tab-content full_width">
-        <%= render :partial => 'form' %>
-      </div>
+<% content_for :breadcrumbs do %>
+  <%= t "replication.create" %>
+<% end %>
+<div class="page-content-new row collapse">
+  <div class="large-4 medium-4 columns"></div>
+  <div class="large-8 medium-8 columns side-tab-content-container">
+    <div class="side-tab-content no-side-bar">
+      <%= render :partial => 'form' %>
     </div>
   </div>
 </div>
