--- a/app/views/form_section/_field_display_basic.html.erb
+++ b/app/views/form_section/_field_display_basic.html.erb
@@ -4,6 +4,11 @@
   </div>
   <div class="medium-8 columns">
     <% value = field_value_for_display formObject[field.name] %>
+    <%
+      if field.multi_select.present? and field.multi_select == true
+        value = field_value_for_multi_select formObject[field.name], field
+      end
+    %>
     <% value = I18n.t("cases.hidden_text_field_text") if formObject[:hidden_name] && field.hidden_text_field%>
     <span class="value"><%= value %></span>
   </div>
