--- a/app/views/form_section/_fields.html.erb
+++ b/app/views/form_section/_fields.html.erb
@@ -20,7 +20,14 @@
         <label class="key inline"><%= t("fields.#{field_name.to_sym}", :locale => given_locale.to_sym) %></label>
       </div>
       <div class="large-9 medium-9 columns">
-        <%= fld.send "#{field_type}", "#{field_name}_#{given_locale}".to_sym %>
+        <%
+          if field_type == :text_area && fld.object[:multi_select] && field_name == :option_strings_text && fld.object[:"option_strings_text_#{given_locale}"].present?
+            value = fld.object[:"option_strings_text_#{given_locale}"].map{|option| "#{option['display_text']}\r\n"}.join('')
+          else
+            value = fld.object[:"#{field_name.to_s}_#{given_locale}"]
+          end
+        %>
+        <%= fld.send "#{field_type}", "#{field_name}_#{given_locale}".to_sym, value: value %>
       </div>
     </div>
   <% end %>
