Commented out logic to convert multiselect translations to hash, and making multi-select options not editable if options are hashes

--- a/app/views/form_section/_edit_fields.html.erb
+++ b/app/views/form_section/_edit_fields.html.erb
@@ -54,7 +54,7 @@
           <td>
             <%= field.help_text %>
           </td>
-          <td><%= field.type.try(:humanize) %></td>
+          <td><%= field.type.try(:humanize) %><br><small><%= "(multi-select)" if field.multi_select %></small></td>
           <td align="center">
             <% if @form_section.editable? && field.editable? %>
               <%= check_box_tag "fields[]", field.name, !field.visible? , {:id => "fields_#{field.name}", :class => "field_hide_show"} %>
